--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "copy-to-clipboard": "^3.3.3",
     "next": "^12.3.4",
     "next-api-og-image": "^4.3.0",
+    "pnpm": "^9.7.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
     "react-canvas-confetti": "^1.4.0",
